--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-​@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
   background: linear-gradient(236.85deg, #041832 27.26%, #3468A7 96.03%);
